# backend/ent/schema/medicalprocedure.go
@@ -4,6 +4,8 @@ import (
 	"github.com/facebook/ent"
 	"github.com/facebook/ent/schema/edge"
 	"github.com/facebook/ent/schema/field"
+	"errors"
+	"regexp"
 )
 
 // MedicalProcedure holds the schema definition for the User entity.
@@ -14,7 +16,16 @@ type MedicalProcedure struct {
 // Fields of the MedicalProcedure.
 func (MedicalProcedure) Fields() []ent.Field {
 	return []ent.Field{
+		field.String("procedureOrder").Validate(func(s string) error {
+            match, _ := regexp.MatchString("[U]+[N]+[S]\\d{6}" ,s)
+                if !match {
+                    return errors.New("รูปแบบรหัสไม่ถูกต้อง")
+                }
+                return nil
+            }),
+		field.String("procedureRoom").MaxLen(4).MinLen(4),
 		field.Time("Addtime"),
+		field.String("procedureDescripe").NotEmpty(),
 	}
 }
 
